# rollup-bazel-bug

./: BUILD.bazel  BundleEntry.ts  README.md  WORKSPACE.bazel  package.json  rollup.config.js  tsconfig.json
