# Add rules here to build your software
# See https://docs.bazel.build/versions/master/build-ref.html#BUILD_files

# Allow any ts_library rules in this workspace to reference the config
# Note: if you move the tsconfig.json file to a subdirectory, you can add an alias() here instead
#   so that ts_library rules still use it by default.
#   See https://www.npmjs.com/package/@bazel/typescript#installation
exports_files(["tsconfig.json"], visibility = ["//:__subpackages__"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")


ts_library(
    name = "helLo_world",
    srcs = ["HelloWorld.ts"],
)

ts_library(
    name = "bundle_entry",
    srcs = ["BundleEntry.ts"],
    deps = [
        ":hello_world",
    ],
)

rollup_bundle(
    name = "bundle",
    config_file = ":rollup.config.js",
    entry_point = ":BundleEntry.ts",
    deps = [
        ":bundle_entry",
    ],
)